# nl2flow-runner

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  docker-compose.yml  pyproject.toml
ai_profiling/cli/: cli.py
ai_profiling/data/: prompt_templates.py
ai_profiling/data/data_generation/: generator_input.json  generator_input_experiment.json
ai_profiling/data/planning/: planning_sources.py
ai_profiling/data/text_files/: concise_planning_examples.txt  json_examples.txt  planning_examples.txt
ai_profiling/datatypes/: database_datatype.py  planning_datatype.py  service_datatype.py  stat_datatype.py
ai_profiling/generators/: llm_data_generator.py  planning_data_generator.py  planning_data_generator_datatypes.py  template_generator.py
ai_profiling/helpers/converter_helper/: pydantic_converter_helper.py
ai_profiling/helpers/data_pipeline_helper/: file_data_helper.py
ai_profiling/helpers/evaluator_helper/: evaluator_helper.py
ai_profiling/helpers/file_helper/: file_helper.py
ai_profiling/helpers/hash_helper/: hash_helper.py
ai_profiling/helpers/model_helper/: model_converter.py
ai_profiling/helpers/planner_helper/: plan_comparison_helper.py  plan_quality_helper.py  plan_validation_helper.py  planner_helper.py  planner_helper_datatypes.py  planner_helper_variables.py
ai_profiling/helpers/prompt_helper/: planner_prompt_helper.py  planner_prompt_helper_variable.py
ai_profiling/helpers/str_helper/: str_helper.py  (+1 more)
ai_profiling/pipeline/: llm_planning_pipeline.py
notebooks/: dataset_preparation.ipynb  llm_json_response_analysis.ipynb  llm_planning_response_analysis.ipynb
tests/collector/: test_collector.py
tests/conversions/: test_conversions.py
tests/evaluator/: test_evaluator.py
tests/prompts/: test_prompts.py
tests/test_helpers/: file_helper.py
(+274 files in other folders)
