[project]
name            = "nl2flow_runner"
description     = "NL2FLOW Runner"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
keywords     = ["automated planning", "synthetic data", "large language model", "generative ai"]
authors      = [{ name = "Jung koo Kang", email = "jungkoo.kang@gmail.com" }]
dependencies = ["torch", "datasets", "nl2flow", "pandas==2.2.2", "datasets==2.20.0", "matplotlib", "scikit-learn", "statsmodels","scipy<=1.15.3"]
dynamic      = ["version"]
readme       = { file = "README.md", content-type = "text/markdown" }

[project.scripts]
nl2flow = "ai_profiling.cli.cli:cli"

[project.optional-dependencies]
test     = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-mock", "black", "pre-commit", "pytest-mock"]
notebook = ["jupyter", "ipywidgets", "widgetsnbextension", "pandas-profiling"]
# server=["fastapi[all]", "uvicorn[standard]"]


[project.urls]
homepage   = "https://github.com/IBM/nl2flow-runner"
repository = "https://github.com/IBM/nl2flow-runner"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ai_profiling*"]

[tool.setuptools.package-data]
"ai_profiling.data.text_files" = ["*"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
line_length                    = 120
multi_line_output              = 3
include_trailing_comma         = true
force_grid_wrap                = 0
use_parentheses                = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
addopts      = ["--verbose", "-Werror::FutureWarning"]
testpaths    = "tests"
python_files = "*.py"
